deploy/app/services/chatbot-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-svc
spec:
  selector:
    app: chatbot-app
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
