deploy/app/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: fastapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-svc
            port:
              number: 80
  - host: chatbot.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatbot-svc
            port:
              number: 80
